Fix message form on mobile

--- a/src/components/chat-view/chat-view.scss
+++ b/src/components/chat-view/chat-view.scss
@@ -18,6 +18,10 @@ ul.chat-view {
   flex-direction: column;
   align-items: flex-start;
 
+   @include mobile {
+     margin-bottom: 90px;
+   }
+
   li.message {
     margin: .5rem 1rem;
     display: flex;
