--- a/src/components/message-form/message-form.scss
+++ b/src/components/message-form/message-form.scss
@@ -6,6 +6,13 @@
   z-index: 4;
   border-top: 1px solid rgba(0,0,0,0.15);
 
+  @include mobile {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
   .textarea-wrapper {
     border: 1px solid #ced4da;
     border-radius: 50px;
